--- a/Components/Pages/EmployeeDetails.razor
+++ b/Components/Pages/EmployeeDetails.razor
@@ -18,7 +18,7 @@ else
                     <h4>Staff ID: @employee.Id</h4>
                     <h4>Email: @employee.Email</h4>
                     <h4>Starting Date: @employee.StartingDate.ToString()</h4>
-                    <h4>Department: @employee.DepartmentId</h4>
+                    <h4>Department: @employee.DepartmentName</h4>
                 </div>
                 <div class="card-footer text-center">
                     <a href="/stafflist" class="btn btn-primary">Back</a>
