--- a/Components/Pages/StaffDetails.razor
+++ b/Components/Pages/StaffDetails.razor
@@ -17,7 +17,7 @@ else
                     @* <img class="card-img-top" src="@staff.Photo" /> *@
                     <h4>Staff ID: @staff.EmployeeId</h4>
                     <h4>Email: @staff.Email</h4>
-                    <h4>Starting Date: @staff.DateofBirth.ToString()</h4>
+                    <h4>Starting Date: @staff.StartingDate.ToString()</h4>
                     <h4>Department: @staff.DepartmentId</h4>
                 </div>
                 <div class="card-footer text-center">
