--- a/Components/Pages/StaffList.razor
+++ b/Components/Pages/StaffList.razor
@@ -19,7 +19,7 @@ else
                     <div class="card-footer text-center">
                         <a href="@($"staffdetails/{staff.EmployeeId}")" class="btn btn-primary m-1">View</a>
                         <a href="@($"editstaff/{staff.EmployeeId}")" class="btn btn-primary m-1">Edit</a>
-                        <a href="@($"delete/{staff.EmployeeId}")" class="btn btn-danger m-1">Delete</a>
+                        <a href="#" class="btn btn-danger m-1">Delete</a>
                     </div>
                 </div>
             </div>
